# yandex_pay_api

./: Cargo.toml  ReadMe.md
examples/: main.rs
src/: lib.rs  orders.rs  orders_cancel.rs  orders_capture.rs  orders_id.rs  orders_refund.rs  orders_submit.rs  orders_subscriptions.rs  orders_subscriptions_id.rs  orders_subscriptions_recur.rs  serde_help.rs
