[package]
name = "yandex_pay_api"
version = "0.4.0"
edition = "2024"
authors = ["Modeck Rus <modeckrus.official.page@gmail.com>"]
categories = ["api-bindings"]
description = "Yandex Pay API"
documentation = "https://docs.rs/yandex_pay_api"
homepage = "https://github.com/modeckrus/yandex_pay_api"
keywords = ["yandex", "pay", "api"]
license = "MIT OR Apache-2.0"
readme = "ReadMe.md"
repository = "https://github.com/modeckrus/yandex_pay_api"

[features]
default = ["reqwest", "rustls"]
reqwest = ["dep:reqwest"]
rustls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]

[dependencies]
tracing = "0.1"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = { version = "1" }
reqwest = { version = "0.12", optional = true, default-features = false }
uuid = { version = "1", features = ["v7"] }
thiserror = "2"
serde_repr = "0.1"
builder-pattern = "0.4"
chrono = { version = "0.4" }
bytes = { version = "1" }

[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1.45", features = ["full"] }
tracing-subscriber = "0.3.19"
